2008-09-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9277: Incorrect size of htmlArea RTE dialogue windows in Google Chrome browser
	* Fixed bug #9338: htmlArea RTE: incorrect opening size of some dialogue windows

2008-09-11  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8644: Usersettings with fullHelptextMode looks weird (thanks to Steffen Kamper)

2008-09-10  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9315: Description of tslib_fe::includeTCA is incorrect

2008-09-09  Dmitry Dulepov  <dmitry@typo3.org>

    * Fixed bug #9268: TCA is not loaded in FE when config cache is disabled

2008-09-08  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9312: felogin: uninitialized vars (Thanks to Steffen Kamper)
	* Fixed bug #9282: Allow subkeys for TypoScript "config." array

2008-09-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #8996: htmlArea RTE: link to file not updated when changing case in file name
	* Fixed bug #9022: Link-Icon stays grey while trying to link an image in ie7
	* Fixed bug #3546: htmlArea RTE: wrong charset used by mb_regex in spell checker

2008-09-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #9296: htmlArea RTE: remove upload form when element browser is in readOnly mode

2008-09-07  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #9301: Missing colorization in Localization Overview of the page tree, credits Steffen Kamper

2008-09-07  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8677: FE login redirect after logout does not work (thanx to Steffen Kamper)

2008-09-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9296: htmlArea RTE: remove upload form when element browser is in readOnly mode

2008-09-04  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9227: Group field in Flexforms with a single table does not show selected items

2008-09-03  Dmitry Dulepov  <dmitry@typo3.org>

    * Fixed bug #8532: enhance TYPO3 manual (inline)

2008-09-02  Dmitry Dulepov  <dmitry@typo3.org>
